--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx serve"
+    "start": "npx serve",
+    "DEPLOY": "aws --profile unegma s3 sync --delete ./ s3://playground.unegma.work/"
   },
   "author": "",
   "license": "ISC"
